--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
       </div>
 
       <div class="free-trial">
-        <div class="try-it"><span>Try it free 7 days</span> then $20/mo. thereafter</div>
+        <div class="try-it card"><span>Try it free 7 days</span> then $20/mo. thereafter</div>
 
-        <div class="info">
+        <div class="info card">
 
-          <form><input type="text" placeholder="First Name">
-            <input type="text" placeholder="Last Name">
-            <input type="email" placeholder="Email Address">
-            <input type="password" placeholder="Password">
+          <form>
+            <input type="text" id="first-name" placeholder="First Name">
+            <input type="text" id="last-name" placeholder="Last Name">
+            <input type="email" id="email" placeholder="Email Address">
+            <input type="password" id="password" placeholder="Password">
           </form>
 
           <div class="button">Claim your free trial</div>
