modify submit button

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
               <img class="error-icon hidden" src="images/icon-error.svg" alt="">
             </div>
             <p class="error-msg hidden">Password cannot be empty</p>
-          </form>
 
-          <div class="button">Claim your free trial</div>
+            <button type="submit">Claim your free trial</button>
+          </form>
 
           <p class="disclamer">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
         </div>
